[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/rolling ball/background_green.png" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://assets/rolling ball/hole_large_end.png" type="Texture" id=3]
[ext_resource path="res://assets/rolling ball/ball_blue_small.png" type="Texture" id=4]
[ext_resource path="res://assets/rolling ball/block_large.png" type="Texture" id=5]
[ext_resource path="res://assets/rolling ball/laser.png" type="Texture" id=6]

[sub_resource type="TileSet" id=1]
0/name = "background_green.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 256 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 328 )

[sub_resource type="CircleShape2D" id=6]
radius = 40.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 64 )

[sub_resource type="CapsuleShape2D" id=8]
height = 108.0

[sub_resource type="PhysicsMaterial" id=5]
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="World" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="World"]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0 )

[node name="Borders" type="StaticBody2D" parent="World"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Borders"]
position = Vector2( -320, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="World/Borders"]
position = Vector2( 320, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="World/Borders"]
position = Vector2( 0, -255 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="World/Borders"]
position = Vector2( 0, 256 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="World"]
position = Vector2( 224, 168 )

[node name="HoleLargeEnd" type="Sprite" parent="World/Area2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Area2D"]
shape = SubResource( 6 )

[node name="Obstacles" type="Node2D" parent="World"]

[node name="StaticBody2D" type="StaticBody2D" parent="World/Obstacles"]
position = Vector2( 64, 136 )

[node name="BlockLarge" type="Sprite" parent="World/Obstacles/StaticBody2D"]
self_modulate = Color( 1, 0.443137, 0.443137, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles/StaticBody2D"]
shape = SubResource( 7 )

[node name="StaticBody2D3" type="StaticBody2D" parent="World/Obstacles"]
position = Vector2( -152, -136 )

[node name="BlockLarge" type="Sprite" parent="World/Obstacles/StaticBody2D3"]
self_modulate = Color( 1, 0.443137, 0.443137, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles/StaticBody2D3"]
shape = SubResource( 7 )

[node name="StaticBody2D4" type="StaticBody2D" parent="World/Obstacles"]
position = Vector2( 56, -136 )

[node name="BlockLarge" type="Sprite" parent="World/Obstacles/StaticBody2D4"]
self_modulate = Color( 1, 0.443137, 0.443137, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles/StaticBody2D4"]
shape = SubResource( 7 )

[node name="StaticBody2D2" type="StaticBody2D" parent="World/Obstacles"]
position = Vector2( 208, 0 )
rotation = 1.5708

[node name="BlockLarge" type="Sprite" parent="World/Obstacles/StaticBody2D2"]
self_modulate = Color( 1, 0.443137, 0.443137, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles/StaticBody2D2"]
shape = SubResource( 7 )

[node name="StaticBody2D5" type="StaticBody2D" parent="World/Obstacles"]
position = Vector2( -184, 96 )
rotation = 1.5708

[node name="BlockLarge" type="Sprite" parent="World/Obstacles/StaticBody2D5"]
self_modulate = Color( 1, 0.443137, 0.443137, 1 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Obstacles/StaticBody2D5"]
shape = SubResource( 7 )

[node name="Laser" type="Area2D" parent="World"]
position = Vector2( 64, 0 )

[node name="LaserSprite" type="Sprite" parent="World/Laser"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Laser"]
shape = SubResource( 8 )

[node name="Laser2" type="Area2D" parent="World"]
position = Vector2( -48, -120 )
rotation = 1.5708

[node name="LaserSprite" type="Sprite" parent="World/Laser2"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Laser2"]
shape = SubResource( 8 )

[node name="Laser3" type="Area2D" parent="World"]
position = Vector2( -40, 184 )
rotation = 1.5708

[node name="LaserSprite" type="Sprite" parent="World/Laser3"]
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Laser3"]
shape = SubResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Ball" type="RigidBody2D" parent="."]
mass = 1.02041
physics_material_override = SubResource( 5 )
gravity_scale = 0.0

[node name="BallBlueSmall" type="Sprite" parent="Ball"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="ImpulseTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="World/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="World/Laser" to="." method="_on_Laser_body_entered"]
[connection signal="body_entered" from="World/Laser2" to="." method="_on_Laser_body_entered"]
[connection signal="body_entered" from="World/Laser3" to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="ImpulseTimer" to="." method="_on_ImpulseTimer_timeout"]
